Update website content

--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                 <div class="text-content">
                     <h2>Cultivating Purpose.</h2>
                     <p>Our heart lies in <b>4 acres</b> dedicated to regenerative permaculture, focusing on resilient South Indian native species. Learn, grow, and harvest together, restoring the land while nourishing our community. This is sustainability in action.</p>
-                    <img src="images/village_well.jpg" alt="Old stone well" class="inline-icon">
+                    <!-- <img src="images/village_well.jpg" alt="Old stone well" class="inline-icon"> -->
                     <!-- Replace with actual path to Image 5 -->
                 </div>
                 <div class="image-content">
@@ -418,7 +418,7 @@
                 <p>If our vision resonates, we invite you to connect. Learn more about membership opportunities and help shape this unique sanctuary from the ground up.</p>
 
                 <!-- IMPORTANT: This form needs a backend/service to actually send emails -->
-                <form id="contact-form" action="https://formspree.io/f/rajeshs142@gmail.com" method="POST">
+                <!-- <form id="contact-form" action="https://formspree.io/f/rajeshs142@gmail.com" method="POST">
                     <div class="form-group">
                         <label for="name">Name:</label>
                         <input type="text" id="name" name="name" required>
@@ -432,9 +432,12 @@
                         <textarea id="message" name="message" rows="5" required></textarea>
                     </div>
                     <button type="submit" class="btn">Send Inquiry</button>
-                    <p id="form-status" class="form-status"></p> <!-- For feedback -->
-                </form>
-                <p class="contact-alternative">Or reach us directly at: <a href="mailto:rajeshs142@gmail.com">rajeshs142@gmail.com</a></p>
+                    <p id="form-status" class="form-status"></p>
+                </form> -->
+                <!-- whatsapp -->
+                <p class="contact-message">Whatsapp us at: <a href="https://wa.me/919603784274"><b>+91 9603784274</b></a></p>
+                <div class="contact-alternative">Or</div>
+                <p class="contact-alternative">Mail us at: <a href="mailto:thehealingcanopy142@gmail.com" subject="The Healing Canopy"><b>thehealingcanopy142@gmail.com</b></a></p>
                 <!-- Replace with your actual email -->
             </div>
         </section>
